--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ before_install:
   - gem install bundler
 
 bundler_args: --without production
+
+env:
+  - GITHUB_OAUTH_CLIENT_KEY=xxx
+  - GITHUB_OAUTH_CLIENT_SECRET=xxx
