--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - GITHUB_OAUTH_CLIENT_SECRET=xxx
 
 script:
+  - bin/rails webpacker:compile
   - bin/rspec spec/models
   - bin/rspec spec/policies
   - bin/rspec spec/system
