--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ before_install:
 bundler_args: --without production
 
 cache:
-  - bundler
-  - yarn
+  bundler: true
+  directories:
+    - node_modules
+  yarn: true
 
 env:
   global:
