switch sqlite to postgresql (#11)
because heroku database is postgresql

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: ruby
 
 env:
@@ -6,6 +7,9 @@ env:
     - GITHUB_OAUTH_CLIENT_KEY=xxx
     - GITHUB_OAUTH_CLIENT_SECRET=xxx
     - GITHUB_USER=github_user
+
+services:
+  - postgresql
 
 bundler_args: --without production
 
@@ -19,6 +23,9 @@ before_install:
   - gem update --system
   - gem install bundler
   - yarn
+
+before_script:
+  - bin/setup
 
 script:
   - bin/rspec
