--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "oknm_jp",
+  "name": "blg",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.2",
+    "bulma": "^0.7.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
