--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
-    "@rails/actioncable": "^6.0.0-alpha",
-    "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/ujs": "^6.0.0-alpha",
+    "@rails/actioncable": "^6.0.0-rc1",
+    "@rails/actiontext": "^6.0.0-rc1",
+    "@rails/activestorage": "^6.0.0-rc1",
+    "@rails/ujs": "^6.0.0-rc1",
     "@rails/webpacker": "^4.0.2",
     "bulma": "^0.7.4",
+    "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
