--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
+  "name": "blg",
+  "description": "\"Blg\" is tiny blog made with Rails.",
+  "repository": "https://github.com/okonomi/blg",
   "addons": [
 
   ],
@@ -17,7 +20,6 @@
   },
   "formation": {
   },
-  "name": "blg",
   "scripts": {
   },
   "stack": "heroku-18"
