--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "blg",
+  "name": "Blg",
   "description": "\"Blg\" is tiny blog made with Rails.",
   "repository": "https://github.com/okonomi/blg",
   "addons": [
