--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -8,3 +8,11 @@ update_configs:
     allowed_updates:
       - match:
           update_type: "all"
+    automerged_updates:
+      - match:
+          dependency_type: "development"
+          update_type: "all"
+      - match:
+          dependency_type: "production"
+          update_type: "semver:patch"
+    version_requirement_updates: "off"
