--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: ruby
 env:
   global:
     - DISABLE_SPRING=1
+    - BLOG_TITLE=Blg
     - GITHUB_OAUTH_CLIENT_KEY=xxx
     - GITHUB_OAUTH_CLIENT_SECRET=xxx
     - GITHUB_USER=github_user
