--- a/heroku.yml
+++ b/heroku.yml
@@ -2,8 +2,8 @@ build:
   docker:
     web: Dockerfile.production
   config:
-    GITHUB_OAUTH_CLIENT_KEY:
-    GITHUB_OAUTH_CLIENT_SECRET:
+    GITHUB_OAUTH_CLIENT_KEY: xxx
+    GITHUB_OAUTH_CLIENT_SECRET: xxx
 release:
   image: web
   command:
