--- a/heroku.yml
+++ b/heroku.yml
@@ -4,6 +4,7 @@ build:
   config:
     GITHUB_OAUTH_CLIENT_KEY: xxx
     GITHUB_OAUTH_CLIENT_SECRET: xxx
+    SECRET_KEY_BASE: xxx
 release:
   image: web
   command:
