cleanup heroku.yml

--- a/heroku.yml
+++ b/heroku.yml
@@ -10,4 +10,4 @@ release:
   command:
     - bin/rails db:prepare
 run:
-  web: bin/rails server -p $PORT -e $RAILS_ENV
+  web: bin/rails server -p $PORT
