--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,15 +1,20 @@
 FROM ruby:2.6.3-alpine3.9 AS builder
 
 ENV RAILS_ENV production
+ARG GITHUB_OAUTH_CLIENT_KEY
+ARG GITHUB_OAUTH_CLIENT_SECRET
+ARG SECRET_KEY_BASE
 
 WORKDIR /app
 
-RUN apk add --update --no-cache build-base
-RUN apk add --update --no-cache libxml2-dev
-RUN apk add --update --no-cache libxslt-dev
-RUN apk add --update --no-cache yarn
-RUN apk add --update --no-cache git
-RUN apk add --update --no-cache postgresql-dev
+RUN apk add --update --no-cache \
+    build-base \
+    libxml2-dev \
+    libxslt-dev \
+    yarn \
+    git \
+    postgresql-dev \
+    tzdata
 
 # install gems
 RUN gem install bundler
@@ -31,11 +36,6 @@ COPY babel.config.js .
 COPY config config
 COPY app/assets app/assets
 COPY app/javascript app/javascript
-RUN apk add --update --no-cache tzdata
-
-ARG GITHUB_OAUTH_CLIENT_KEY
-ARG GITHUB_OAUTH_CLIENT_SECRET
-ARG SECRET_KEY_BASE
 RUN bin/rails assets:precompile
 
 
@@ -55,7 +55,3 @@ COPY --from=builder /usr/local/bundle /usr/local/bundle
 COPY --from=builder /app/public/assets /app/public/assets
 COPY --from=builder /app/public/packs /app/public/packs
 COPY . .
-
-# RUN bin/rails db:schema:load
-
-# EXPOSE 3000
