--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,26 @@ services:
     environment:
       BUNDLE_PATH: /app/.bundle
       BUNDLE_JOBS: 4
+      WEBPACKER_DEV_SERVER_HOST: webpacker
+      WEBPACKER_DEV_SERVER_PUBLIC: webpacker:3035
     command: /bin/sh -c "rm -f tmp/pids/server.pid && bin/rails s -p 3000 -b '0.0.0.0'"
+    depends_on:
+      - db
+  webpacker:
+    build: .
+    ports:
+      - "3035:3035"
+    volumes:
+      - .:/app
+      - bundle:/app/.bundle
+      - node_modules:/app/node_modules
+      - home:/root
+    environment:
+      BUNDLE_PATH: /app/.bundle
+      BUNDLE_JOBS: 4
+      WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
+      WEBPACKER_DEV_SERVER_PUBLIC: 0.0.0.0:3035
+    command: bin/webpack-dev-server
     depends_on:
       - db
   db:
