invalid option "--update"

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -7,7 +7,7 @@ ARG SECRET_KEY_BASE
 
 WORKDIR /app
 
-RUN apk add --update --no-cache \
+RUN apk add --no-cache \
     build-base \
     libxml2-dev \
     libxslt-dev \
@@ -47,7 +47,7 @@ ENV RAILS_SERVE_STATIC_FILES 1
 
 WORKDIR /app
 
-RUN apk add --update --no-cache \
+RUN apk add --no-cache \
     postgresql-libs \
     tzdata
 
