--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.7"
 
 services:
   web: &app_base
-    build: .
+    build:
+      context: .
+      target: development
     ports:
       - "3000:3000"
     volumes:
