--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,8 @@
 build:
   docker:
-    web: Dockerfile.production
+    web:
+      dockerfile: Dockerfile
+      target: production
   config:
     GITHUB_OAUTH_CLIENT_KEY: xxx
     GITHUB_OAUTH_CLIENT_SECRET: xxx
