--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0-rc1",
     "@rails/webpacker": "^4.0.2",
     "bulma": "^0.7.4",
+    "highlight.js": "^9.15.8",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
