--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1",
-    "@rails/actioncable": "^6.0.0-rc2",
-    "@rails/actiontext": "^6.0.0-rc2",
-    "@rails/activestorage": "^6.0.0-rc2",
-    "@rails/ujs": "^6.0.0-rc2",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.2",
     "bulma": "^0.7.4",
     "highlight.js": "^9.15.9",
