--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "@rails/webpacker": "^4.0.2",
     "bulma": "^0.7.4",
     "highlight.js": "^9.15.10",
-    "trix": "^1.2.0",
-    "turbolinks": "^5.2.0"
+    "trix": "^1.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
