--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ cache:
   yarn: true
 
 before_install:
-  - gem update --system
+  - yes | gem update --system
   - gem install bundler
   - yarn
 
