--- a/engines/blg/Gemfile
+++ b/engines/blg/Gemfile
@@ -1,5 +1,5 @@
-source 'https://rubygems.org'
-git_source(:github) { |repo| "https://github.com/#{repo}.git" }
+source "https://rubygems.org"
+git_source(:github) {|repo| "https://github.com/#{repo}.git" }
 
 # Declare your gem's dependencies in blg.gemspec.
 # Bundler will treat runtime dependencies like base dependencies, and
