--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ cache:
 
 before_install:
   - gem update --system 3.1.2
-  - yarn
+  - sudo apt-get install chromium-chromedriver
 
 before_script:
   - bin/setup
