--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@rails/actiontext": "^6.0.2",
     "@rails/activestorage": "^6.0.2",
     "@rails/ujs": "^6.0.2",
-    "@rails/webpacker": "^4.0.2",
+    "@rails/webpacker": "4.2.2",
     "bulma": "^0.8.0",
+    "core-js": "^3.6.1",
     "highlight.js": "^9.17.1",
+    "regenerator-runtime": "^0.13.3",
     "trix": "^1.2.2"
   },
   "version": "0.1.0",
