--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ cache:
 
 before_install:
   - gem update --system 3.1.2
+  - gem install bundler -v 2.1.4
   - sudo apt-get install chromium-chromedriver
 
 before_script:
