--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ cache:
 before_install:
   - gem update --system 3.1.2
   - sudo apt-get install chromium-chromedriver
+  - sudo apt-get install nodejs
 
 before_script:
   - bin/setup
