--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     volumes:
       - pg_data:/data
     environment:
+      POSTGRES_PASSWORD: postgres
       PGDATA: /data
 
 volumes:
