chore: append rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,3 +52,12 @@ Metrics/BlockLength:
   Exclude:
     - "spec/**/*"
     - "config/environments/*"
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
