--- a/app.json
+++ b/app.json
@@ -29,6 +29,9 @@
     },
     "SECRET_KEY_BASE": {
       "description": "for Rails config value"
+    },
+    "OMNIAUTH_FULL_HOST": {
+      "description": "OmniAuth.config.full_host value"
     }
   },
   "formation": {},
