--- a/config/storage.yml
+++ b/config/storage.yml
@@ -28,6 +28,9 @@ local:
 #   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
 #   container: your_container_name
 
+cloudinary:
+  service: Cloudinary
+
 # mirror:
 #   service: Mirror
 #   primary: local
