--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -29,5 +29,11 @@ jobs:
           ruby-version: 2.7.1
       - name: Install dependencies
         run: bundle install
-      # - name: Run tests
-      #   run: bin/rspec
+      - name: Run tests
+        run: bin/rspec
+        env:
+          DISABLE_SPRING: 1
+          BLOG_TITLE: Blg
+          GITHUB_OAUTH_CLIENT_KEY: xxx
+          GITHUB_OAUTH_CLIENT_SECRET: xxx
+          GITHUB_USER: github_user
