--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -27,6 +27,8 @@ jobs:
         uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
         with:
           ruby-version: 2.7.1
+      - name: Set up rubygems
+        run: gem update --system
       - name: Install dependencies
         run: bundle install
       - name: Run tests
