--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -41,6 +41,8 @@ jobs:
         run: gem update --system
       - name: Install dependencies
         run: bundle install
+      - name: Setup database
+        run: cp config/database.yml.github-actions config/database.yml
       - name: Run tests
         run: bin/rspec
         env:
