--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -46,6 +46,7 @@ jobs:
           cp config/database.yml.github-actions config/database.yml
           bin/rails db:prepare
         env:
+          RAILS_ENV: test
           DISABLE_SPRING: 1
           BLOG_TITLE: Blg
           GITHUB_OAUTH_CLIENT_KEY: xxx
