chore: set timezone

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -58,3 +58,4 @@ jobs:
           GITHUB_OAUTH_CLIENT_KEY: xxx
           GITHUB_OAUTH_CLIENT_SECRET: xxx
           GITHUB_USER: github_user
+          TZ: Asia/Tokyo
