--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -57,6 +57,7 @@ jobs:
           bin/setup
         env:
           RAILS_ENV: test
+          BUNDLE_PATH: vendor/bundle
           DISABLE_SPRING: 1
           BLOG_TITLE: Blg
           GITHUB_OAUTH_CLIENT_KEY: xxx
