--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           cp config/database.yml.github-actions config/database.yml
           bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
           bin/setup
         env:
           RAILS_ENV: test
