--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -53,15 +53,13 @@ jobs:
           bin/setup
         env:
           RAILS_ENV: test
-          DISABLE_SPRING: 1
           BLOG_TITLE: Blg
           GITHUB_OAUTH_CLIENT_KEY: xxx
           GITHUB_OAUTH_CLIENT_SECRET: xxx
           GITHUB_USER: github_user
       - name: Run tests
-        run: bin/rspec
+        run: bundle exec rspec
         env:
-          DISABLE_SPRING: 1
           BLOG_TITLE: Blg
           GITHUB_OAUTH_CLIENT_KEY: xxx
           GITHUB_OAUTH_CLIENT_SECRET: xxx
