--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
     "@rails/actioncable": "6.1.4",
-    "@rails/actiontext": "6.1.4",
+    "@rails/actiontext": "7.0.0-alpha2",
     "@rails/activestorage": "6.1.4",
     "@rails/ujs": "6.1.4",
     "@rails/webpacker": "5.4.0",
