--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "core-js": "3.18.1",
     "highlight.js": "11.2.0",
     "regenerator-runtime": "0.13.9",
+    "sass": "1.42.1",
     "trix": "1.3.1"
   },
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "3.11.2"
+  },
+  "scripts": {
+    "build:css": "sass ./app/assets/stylesheets/application.bulma.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
