--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "5.4.0",
     "bulma": "0.9.3",
     "core-js": "3.18.1",
+    "esbuild": "^0.14.6",
     "highlight.js": "11.2.0",
     "regenerator-runtime": "0.13.9",
     "sass": "1.42.1",
@@ -20,6 +21,7 @@
     "webpack-dev-server": "3.11.2"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.bulma.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.bulma.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
   }
 }
