--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@rails/activestorage": "6.1.4",
     "@rails/ujs": "6.1.4",
     "@rails/webpacker": "5.4.0",
-    "bulma": "0.9.3",
+    "bulma": "^0.9.3",
     "core-js": "3.18.1",
     "esbuild": "^0.14.6",
     "highlight.js": "11.2.0",
     "regenerator-runtime": "0.13.9",
-    "sass": "1.42.1",
+    "sass": "^1.45.1",
     "trix": "1.3.1"
   },
   "version": "0.1.0",
