--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
     "@rails/actioncable": "6.1.4",
-    "@rails/actiontext": "6.1.4",
+    "@rails/actiontext": "^7.0.0",
     "@rails/activestorage": "6.1.4",
     "@rails/ujs": "6.1.4",
     "@rails/webpacker": "5.4.0",
@@ -14,7 +14,7 @@
     "highlight.js": "11.2.0",
     "regenerator-runtime": "0.13.9",
     "sass": "1.45.1",
-    "trix": "1.3.1"
+    "trix": "^1.3.1"
   },
   "version": "0.1.0",
   "devDependencies": {
