remove webpacker service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 
 services:
-  web: &app_base
+  web:
     build:
       context: .
       target: development
@@ -30,11 +30,6 @@ services:
     tty: true
     depends_on:
       - db
-  webpacker:
-    <<: *app_base
-    ports:
-      - "3035:3035"
-    command: bin/webpack-dev-server
   db:
     image: postgres:11
     ports:
