--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "blg",
-  "private": true,
+  "private": "true",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
-    "@rails/actioncable": "6.1.4",
     "@rails/actiontext": "^7.0.0",
-    "@rails/activestorage": "6.1.4",
-    "@rails/ujs": "6.1.4",
-    "@rails/webpacker": "5.4.0",
+    "@rails/ujs": "7.0.0",
     "bulma": "0.9.3",
-    "core-js": "3.18.1",
     "esbuild": "0.14.6",
     "highlight.js": "11.2.0",
-    "regenerator-runtime": "0.13.9",
     "sass": "1.45.1",
     "trix": "^1.3.1"
-  },
-  "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "3.11.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
