--- a/.gitignore
+++ b/.gitignore
@@ -17,25 +17,27 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore pidfiles, but keep the directory.
+/tmp/pids/*
+!/tmp/pids/
+!/tmp/pids/.keep
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
+/tmp/storage/*
+!/tmp/storage/
+!/tmp/storage/.keep
 
 /public/assets
-.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/packs
-/public/packs-test
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
 /node_modules
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
 
 .env
 Brewfile.lock.json
-
-/app/assets/builds/*
-!/app/assets/builds/.keep
