--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": "true",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.1.1",
-    "@rails/actiontext": "^7.0.0",
-    "@rails/ujs": "7.0.0",
+    "@rails/actiontext": "^7.0.3-1",
+    "@rails/ujs": "7.0.3-1",
     "bulma": "0.9.3",
     "esbuild": "0.14.29",
     "highlight.js": "11.5.0",
