--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
+    "@rails/actiontext": "^7.0.3-1",
     "bulma": "^0.9.4",
     "esbuild": "^0.15.5",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "trix": "^2.0.0-beta.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
