--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bulma": "^0.9.4",
     "esbuild": "^0.15.5",
     "sass": "^1.54.5",
-    "trix": "^2.0.0-beta.0"
+    "trix": "1.3.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
