--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "app",
+  "name": "blg",
   "private": "true",
   "dependencies": {
-    "@rails/actiontext": "^7.0.3-1",
-    "bulma": "^0.9.4",
-    "esbuild": "^0.15.5",
-    "sass": "^1.54.5",
+    "@rails/actiontext": "7.0.3-1",
+    "bulma": "0.9.4",
+    "esbuild": "0.15.5",
+    "sass": "1.54.5",
     "trix": "1.3.1"
   },
   "scripts": {
