--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blg",
   "private": "true",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "6.1.2",
     "@rails/actiontext": "7.0.3-1",
     "bulma": "0.9.4",
     "esbuild": "0.15.5",
