--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.1.2",
     "@rails/actiontext": "7.0.3-1",
+    "@rails/ujs": "7.0.3-1",
     "bulma": "0.9.4",
     "esbuild": "0.15.5",
     "sass": "1.54.5",
