--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "7.0.3-1",
     "bulma": "0.9.4",
     "esbuild": "0.15.5",
+    "highlight.js": "11.6.0",
     "sass": "1.54.5",
     "trix": "1.3.1"
   },
